<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_glass"
    android:orientation="vertical"
    android:padding="22dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/very_high_confirmation_title"
        android:textColor="@color/glass_text_primary"
        android:textSize="21sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:lineSpacingExtra="2dp"
        android:text="@string/very_high_confirmation_warning"
        android:textColor="@color/glass_text_secondary"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonApplyVeryHigh"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/bg_glass_button_primary"
        android:fontFamily="sans-serif-medium"
        android:stateListAnimator="@null"
        android:text="@string/apply_very_high"
        android:textAllCaps="false"
        android:textColor="@color/glass_button_text"
        app:backgroundTint="@null" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonCancelVeryHigh"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_glass_button_secondary"
        android:fontFamily="sans-serif-medium"
        android:stateListAnimator="@null"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/glass_text_primary"
        app:backgroundTint="@null" />
</LinearLayout>
